<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD8DC"
    android:orientation="vertical"
    tools:context=".rDetail">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="13dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rDetails"
            android:textSize="65sp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="@dimen/padding10"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/etRemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/eEmail"
            android:inputType="textEmailAddress"
            android:padding="12dp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/etRfullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fName"
            android:padding="12dp"
            android:background="@color/white"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp">
        <EditText
            android:id="@+id/etRcontactInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cInformation"
            android:inputType="phone"
            android:padding="12dp"
            android:background="@color/white"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp">
        <EditText
            android:id="@+id/etRcountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eCountry"
            android:padding="12dp"
            android:background="@color/white"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp">
        <EditText
            android:id="@+id/etRaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eAddress"
            android:inputType="textPostalAddress"
            android:padding="12dp"
            android:background="@color/white"/>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnRnext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:text="@string/btnNext"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"/>


</LinearLayout>